updating swagger.json and api models
