# CustomerFrontend/src/app/api/models.ts
@@ -3,5 +3,6 @@ export { BasketDto } from './models/basket-dto';
 export { Item } from './models/item';
 export { ItemDto } from './models/item-dto';
 export { Order } from './models/order';
+export { OrderDto } from './models/order-dto';
 export { Products } from './models/products';
 export { WeatherForecast } from './models/weather-forecast';
